[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/level_gen/Level.gd" type="Script" id=1]
[ext_resource path="res://src/turn_queue/TurnQueue.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/interface/Minimap_Display.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/interface/Minimap_Display.gd" type="Script" id=4]
[ext_resource path="res://assets/Tilesets/minimap_tileset.tres" type="TileSet" id=5]
[ext_resource path="res://src/level_gen/VisibilityMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/interface/Region_Display.tscn" type="PackedScene" id=7]

[node name="Level" type="Node"]
script = ExtResource( 1 )

[node name="TurnQueue" parent="." instance=ExtResource( 2 )]

[node name="Minimap_Display" parent="." instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="Minimap_Tilemap" parent="Minimap_Display" index="0"]
visible = true
tile_set = ExtResource( 5 )
script = null

[node name="VisibilityMap" parent="." instance=ExtResource( 6 )]
visible = true
z_index = 3

[node name="Region_Display" parent="." instance=ExtResource( 7 )]
visible = true
[connection signal="area_fow" from="VisibilityMap" to="." method="_on_VisibilityMap_area_fow"]
[connection signal="area_visible" from="VisibilityMap" to="." method="_on_VisibilityMap_area_visible"]

[editable path="Minimap_Display"]
